--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "figlet": "1.4.0",
     "helmet": "3.22.0",
     "lodash.upperfirst": "4.3.1",
+    "mathjs": "^9.5.0",
     "morgan": "1.10.0",
     "next": "9.5.2",
     "open": "7.0.4",
