--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "open": "7.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.14.3",
     "react-responsive": "^9.0.0-beta.4",
     "rxjs": "~6.5.5",
     "shelljs": "0.8.4",
